<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="superuser">Superuser</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="status_incoming">Incoming Superuser Request&#8230;</string>
    <string name="unknown_uid">Unknown UID: %s</string>
    <string name="application_request">%s is requesting Superuser access.</string>
    <string name="info">Warning: If you do not understand this, you should deny the request.</string>
    <string name="request">Superuser Request</string>
    <string name="package_header">Package:</string>
    <string name="app_header">App:</string>
    <string name="uid_header">Requested UID:</string>
    <string name="command_header">Command:</string>
    <string name="this_time_only">This time only</string>
    <string name="remember_for">Remember choice for %s minutes</string>
    <string name="remember_forever">Remember choice forever</string>
    <string name="interactive">Interactive</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="no_logs">No Logs</string>
    <string name="no_apps">There are currently no Superuser app policies.</string>
    <string name="logging">Logging</string>
    <string name="logging_summary">Enable or disable all Superuser request logging</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pin_protection_summary">Require entry of a PIN to approve Superuser requests</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="request_timeout_summary">Superuser requests will time out and be denied after %s seconds</string>
    <string name="notifications">Notifications</string>
    <string name="none">None</string>
    <string name="notifications_summary">A %s will be shown when an app is granted or denied Superuser permissions</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_mismatch">PIN did not match</string>
    <string name="pin_set">Superuser PIN protection enabled</string>
    <string name="number_seconds">%s seconds</string>
    <string name="superuser_granted">Superuser granted to %s</string>
    <string name="superuser_denied">Superuser denied to %s</string>
    <string name="upper_toast">Upper Toast</string>
    <string name="central_toast">Central Toast</string>
    <string name="lower_toast">Lower Toast</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No notification will be shown</string>
    <string name="developer_warning">Developer Warning:\nandroid.permission.ACCESS_SUPERUSER\nnot declared in manifest.</string>
    <string name="superuser_description">full permissions to all device features and storage</string>
    <string name="superuser_description_more">Superuser grants full access to all device features and storage, including the secure and sensitive hardware elements of your device. This permission is potentially dangerous.</string>
    <string name="declared_permission">Declared Permission</string>
    <string name="declared_permission_summary">Only allow requests from apps that declare android.permission.ACCESS_SUPERUSER</string>
    <string name="automatic_response">Automatic Response</string>
    <string name="prompt">Prompt</string>
    <string name="automatic_response_allow_summary">Automatically allow new requests</string>
    <string name="automatic_response_deny_summary">Automatically deny new requests</string>
    <string name="automatic_response_prompt_summary">Show confirmation dialog for new requests</string>
    <string name="security">Security</string>
    <string name="multiuser_policy">Multiuser Policy</string>
    <string name="multiuser_owner_only_summary">Only the device owner can request Superuser</string>
    <string name="multiuser_owner_managed_summary">The device owner will be prompted when another user requests Superuser</string>
    <string name="multiuser_user_summary">All users can request Superuser</string>
    <string name="multiuser_owner_only">Owner Only</string>
    <string name="multiuser_owner_managed">Owner Managed</string>
    <string name="multiuser_user">All Users</string>
    <string name="multiuser_require_owner">The Multiuser Policy can only be managed by the device owner.</string>
    <string name="owner_login_info">Please switch to the owner account to approve or deny this request.</string>
    <string name="all_commands">All Commands</string>
    <string name="about">About</string>
    <string name="apps">Apps</string>
    <string name="installing">Installing</string>
    <string name="installing_superuser">Installing Superuser&#8230;</string>
    <string name="install_superuser">Install Superuser</string>
    <string name="install_superuser_info">The Superuser binary (su) must be updated.\n\nPlease choose an installation method.\nRecovery mode installation is recommended for HTC devices.</string>
    <string name="recovery_install">Recovery Install</string>
    <string name="install">Install</string>
    <string name="checking_superuser">Checking Superuser&#8230;</string>
    <string name="install_error">There was an error installing Superuser. Please send a log of the error to the developer.</string>
    <string name="install_success">Installation of Superuser was successful.</string>
    <string name="su_binary_outdated">The su binary is out of date.</string>
    <string name="superuser_access">Superuser Access</string>
    <string name="access_disabled">Disabled</string>
    <string name="apps_only">Apps only</string>
    <string name="adb_only">ADB only</string>
    <string name="apps_and_adb">Apps and ADB</string>
    <string name="whats_new">What\'s New</string>
    <string name="rate">Rate</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="pin_disabled">Superuser PIN protection disabled</string>
    <string name="misc">Misc.</string>
    <string name="su_update_reminder">Su update reminder</string>
    <string name="su_reminder_summary">All %ss will be shown when su binary needs update</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No reminder will be shown</string>
    <string name="force_su_update">Force su binary update</string>
    <string name="force_su_update_info">Touch it to show the update dialog for su binary</string>
    <string name="revoke_permission">Revoke Superuser permission</string>
    <string name="details">Details</string>
    <string name="db_delete_error">Superuser permission cannot be revoked from this application. \n
        Please restart the Superuser application and try again.</string>
    <string name="ok">OK</string>
    <string name="permission">Permission</string>
    <string name="run">Run</string>
    <string name="tablet_mode">Tablet UI</string>
    <string name="tablet_mode_info">This feature is available only when you use the application 
        in phones. If you don\'t see the tablet UI for this application and you see 
        this message please click \"%s\" button!</string>
    <string name="got_it">Got it!</string>
    <string name="submit_error">Submit error</string>
    <string name="grace_period_prompt">Specify grace period for every application (minutes):</string>
    <string name="grace_period">Grace Period</string>
    <string name="grace_period_summary">An application will have superuser privileges for %s minutes</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    
    
</resources>
